test/should-fail/jfxc4173d.visage
/**
 * Regress test for JFXC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=interpolate
 * @compile jfxc4173sub.visage
 * @test/warning
 */
